# Quantum

./: .gitmodules  CMakeLists.txt  CMakePresets.json  algo_runtime.cpp  algo_sdk.cpp  main.cpp  src1.cpp  src2.cpp  src3.cpp  src4.cpp  vcpkg.json  vcpkg_bootstrap.cmake
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: defines.h  engine.cpp  engine.h
engine/src/core/: asserts.h  logger.cpp  logger.h
src/: main.cpp
